dhall/tests/type-errors/unit/AssertAlphaTrap.txt
Type error:  --> 1:47
  |
1 | assert : (\(_: Bool) -> _) === (\(x: Bool) -> _)âŠ
  |                                               ^
  |
  = Unbound variable
